@startuml

title __CARTLAYOUTDEMO's Class Diagram__\n

  namespace com.ocnyang.cartlayoutdemo {
    class com.ocnyang.cartlayoutdemo.MainActivity {
        - isEditing : boolean
        - mBtnSubmit : Button
        - mCheckBoxAll : CheckBox
        - mTvEdit : TextView
        - mTvTitle : TextView
        - mTvTotal : TextView
        - recyclerView : RecyclerView
        - totalCheckedCount : int
        - totalCount : int
        - totalPrice : double
        + onClick()
        + onContextItemSelected()
        + onCreateContextMenu()
        # onCreate()
        - calculate()
        - getData()
        - submitEvent()
    }
  }
  

  namespace com.ocnyang.cartlayoutdemo {
    class com.ocnyang.cartlayoutdemo.MainAdapter {
        + MainAdapter()
        + onBindViewHolder()
        # getChildItemLayout()
        # getChildViewHolder()
        # getGroupItemLayout()
        # getGroupViewHolder()
        # getNormalItemLayout()
        # getNormalViewHolder()
    }
  }
  

  com.ocnyang.cartlayoutdemo.MainActivity .up.|> android.view.View.OnClickListener
  com.ocnyang.cartlayoutdemo.MainActivity -up-|> android.support.v7.app.AppCompatActivity
  com.ocnyang.cartlayoutdemo.MainActivity o-- com.ocnyang.cartlayoutdemo.MainAdapter : mAdapter
  com.ocnyang.cartlayoutdemo.MainAdapter -up-|> com.ocnyang.cartlayout.CartAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
